--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
+  "item.diesiraebleach.hihiirokane": "Hihiirokane",
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
+  "item.diesiraebleach.kui": "Kui",
   "effect.seiibutsu": "聖遺物"
 }
