--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -7,5 +7,6 @@
   "item.diesiraebleach.hihiirokane": "Hihiirokane",
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "item.diesiraebleach.kui": "Kui",
+  "item.diesiraebleach.zangetsu": "Zangetsu",
   "effect.seiibutsu": "聖遺物"
 }
