--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,12 +1,12 @@
 {
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
-  "item.diesiraebleach.beikui": "Beikui",
   "item.diesiraebleach.makina_glove": "Makina Glove",
-  "item.diesiraebleach.kui": "Kui",
+  "item.diesiraebleach.bei_kui_item": "Bei Kui Item",
   "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.zangetsu_hiraken": "Zangetsu Hiraken",
   "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
+  "item.diesiraebleach.bei_kui": "Bei Kui",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
   "item.diesiraebleach.hihiirokane": "Hihiirokane",
