--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -8,6 +8,5 @@
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
-  "effect.seiibutsu": "聖遺物",
-  "item.diesiraebleach.zangetsu_hiraken": "Zangetsu Hiraken"
+  "effect.seiibutsu": "聖遺物"
 }
