--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -8,5 +8,6 @@
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
+  "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "effect.seiibutsu": "聖遺物"
 }
