--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,7 +1,7 @@
 {
-  "subtitles.gunfire": "",
-  "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
   "subtitles.panzer": "",
+  "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
+  "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
   "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "item.diesiraebleach.makina_glove": "Makina Glove",
@@ -11,9 +11,10 @@
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
   "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.schmeizer_mahoujin_spawn_egg": "Schmeizer Mahoujin Spawn Egg",
+  "key.diesiraebleach.hihiirokanekatsudou": "Katsudou",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
-  "item.diesiraebleach.hihiirokane": "Hihiirokane",
+  "item.diesiraebleach.hihiirokane": "緋々色金",
   "entity.diesiraebleach.panzer_mahoujin": "Panzer Mahoujin",
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "subtitles.guncharge": "",
