--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,26 +1,30 @@
 {
   "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
+  "key.diesiraebleach.katsudoubei": "Katsudou",
   "item.diesiraebleach.getsugaenkyori": "Getsugaenkyori",
   "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
   "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
-  "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
+  "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "key.diesiraebleach.hihiirokanekatsudou": "Katsudou",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
   "subtitles.panzer": "",
+  "subtitles.kaze": "",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
   "item.diesiraebleach.schmeizer_mahoujin_spawn_egg": "Schmeizer Mahoujin Spawn Egg",
+  "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
   "item.diesiraebleach.hihiirokane": "緋々色金",
   "entity.diesiraebleach.panzer_mahoujin": "Panzer Mahoujin",
   "subtitles.beikuihassha": "",
+  "subtitles.beikeisei": "",
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "subtitles.guncharge": "",
   "subtitles.panzersummon": ""
