qキーで弱攻撃付与

--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,15 +1,16 @@
 {
   "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
-  "key.diesiraebleach.katsudoubei": "Katsudou",
+  "subtitles.finger": "",
+  "key.diesiraebleach.katsudoubei": "Katsudoubei",
   "item.diesiraebleach.getsugaenkyori": "Getsugaenkyori",
   "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
+  "key.diesiraebleach.kougeki": "Kougeki",
   "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
-  "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
-  "key.diesiraebleach.hihiirokanekatsudou": "Katsudou",
+  "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
