--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,21 +1,27 @@
 {
+  "advancements.k_xing_cheng.title": "形成位階",
   "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
   "subtitles.finger": "",
   "key.diesiraebleach.katsudoubei": "Katsudoubei",
   "item.diesiraebleach.getsugaenkyori": "Getsugaenkyori",
-  "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
+  "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "key.diesiraebleach.kougeki": "Kougeki",
   "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
-  "item.diesiraebleach.dora_cannon": "Dora Cannon",
+  "advancements.katsudouj.title": "活動位階",
   "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
+  "item.diesiraebleach.dora_cannon": "Dora Cannon",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
   "subtitles.panzer": "",
+  "item.diesiraebleach.test": "Test",
+  "advancements.souzou.descr": "聖遺物と一体となり、己が渇望を具現化した世界を創り出す。",
+  "advancements.katsudouj.descr": "聖遺物と契約を結び、聖遺物が活動を始めた。",
+  "key.diesiraebleach.oowaza": "Oowaza",
   "subtitles.kaze": "",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
@@ -28,5 +34,7 @@
   "subtitles.beikeisei": "",
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "subtitles.guncharge": "",
-  "subtitles.panzersummon": ""
+  "advancements.souzou.title": "創造位階",
+  "subtitles.panzersummon": "",
+  "advancements.k_xing_cheng.descr": "使い手と同調した聖遺物は形を成し、武器として使えるようになった。"
 }
