--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -35,6 +35,7 @@
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "subtitles.guncharge": "",
   "advancements.souzou.title": "創造位階",
+  "item.diesiraebleach.marglitto_judis": "Marglitto Judis",
   "subtitles.panzersummon": "",
   "advancements.k_xing_cheng.descr": "使い手と同調した聖遺物は形を成し、武器として使えるようになった。"
 }
