--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,12 +1,12 @@
 {
-  "subtitles.gunfire": "",
   "advancements.k_xing_cheng.title": "形成位階",
-  "subtitles.finger": "",
+  "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
+  "subtitles.finger": "",
   "key.diesiraebleach.katsudoubei": "Katsudoubei",
   "item.diesiraebleach.getsugaenkyori": "Getsugaenkyori",
-  "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
+  "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "key.diesiraebleach.kougeki": "Kougeki",
   "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
@@ -14,6 +14,7 @@
   "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
+  "effect.zarathustra_potion_effect": "Eine Faust Ouvertüre",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
@@ -27,6 +28,7 @@
   "item.diesiraebleach.kui": "Kui",
   "item.diesiraebleach.schmeizer_mahoujin_spawn_egg": "Schmeizer Mahoujin Spawn Egg",
   "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
+  "item.diesiraebleach.test_4": "Test 4",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
   "item.diesiraebleach.hihiirokane": "緋々色金",
   "entity.diesiraebleach.panzer_mahoujin": "Panzer Mahoujin",
