--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,6 +1,6 @@
 {
-  "advancements.k_xing_cheng.title": "形成位階",
   "subtitles.gunfire": "",
+  "advancements.k_xing_cheng.title": "形成位階",
   "key.diesiraebleach.katsudou": "Katsudou",
   "subtitles.finger": "",
   "key.diesiraebleach.katsudoubei": "Katsudoubei",
@@ -8,12 +8,14 @@
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
   "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "key.diesiraebleach.kougeki": "Kougeki",
-  "effect.seiibutsu": "聖遺物",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
   "advancements.katsudouj.title": "活動位階",
   "item.minecraft.splash_potion.effect.qliphoth_bacikal": "Splash Potion of Qliphoth Bacikal",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
+  "subtitles.dageki": "",
   "item.minecraft.potion.effect.qliphoth_bacikal": "Qliphoth Bacikal",
+  "effect.zarathustra_potion_effect": "Eine Faust Ouvertüre",
+  "effect.seiibutsu_hihiirokane": "聖遺物・緋々色金",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
   "item.diesiraebleach.qliphoth_bacikal_2": "Qliphoth Bacikal 2",
@@ -24,9 +26,11 @@
   "key.diesiraebleach.oowaza": "Oowaza",
   "subtitles.kaze": "",
   "item.diesiraebleach.makina_glove": "Makina Glove",
+  "effect.seiibutsubei": "聖遺物・闇の賜物",
   "item.diesiraebleach.kui": "Kui",
   "item.diesiraebleach.schmeizer_mahoujin_spawn_egg": "Schmeizer Mahoujin Spawn Egg",
   "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
+  "item.diesiraebleach.test_4": "Test 4",
   "item.minecraft.lingering_potion.effect.qliphoth_bacikal": "Lingering Potion of Qliphoth Bacikal",
   "item.diesiraebleach.hihiirokane": "緋々色金",
   "entity.diesiraebleach.panzer_mahoujin": "Panzer Mahoujin",
@@ -35,6 +39,7 @@
   "item.minecraft.tipped_arrow.effect.qliphoth_bacikal": "Arrow of Qliphoth Bacikal",
   "subtitles.guncharge": "",
   "advancements.souzou.title": "創造位階",
+  "item.diesiraebleach.marglitto_judis": "Marglitto Judis",
   "subtitles.panzersummon": "",
   "advancements.k_xing_cheng.descr": "使い手と同調した聖遺物は形を成し、武器として使えるようになった。"
 }
