--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -18,10 +18,10 @@
   "key.diesiraebleach.oowaza": "Oowaza",
   "subtitles.kaze": "",
   "effect.seiibutsubei": "聖遺物・闇の賜物",
-  "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
   "item.diesiraebleach.test_4": "Test 4",
-  "subtitles.beikuihassha": "",
+  "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
   "subtitles.beikeisei": "",
+  "subtitles.beikuihassha": "",
   "advancements.souzou.title": "創造位階",
   "item.diesiraebleach.fireball": "Fireball",
   "subtitles.kenzangeki": "",
@@ -34,6 +34,7 @@
   "item.diesiraebleach.seiibutsuhihiirokane_item": "聖遺物【緋々色金】",
   "subtitles.ewigkeite": "",
   "effect.zarathustra_potion_effect": "Eine Faust Ouvertüre",
+  "item.diesiraebleach.reset": "Reset",
   "effect.seiibutsu_hihiirokane": "聖遺物・緋々色金",
   "subtitles.punchsuburi": "",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
