--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -2,6 +2,7 @@
   "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
+  "effect.kyusei_p": "吸精",
   "key.diesiraebleach.kougeki": "Kougeki",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
