--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -1,8 +1,10 @@
 {
   "subtitles.gunfire": "",
   "key.diesiraebleach.katsudou": "Katsudou",
+  "subtitles.bakuhatsu2": "",
   "item.diesiraebleach.beienkyoriitem": "Beienkyoriitem",
   "effect.kyusei_p": "吸精",
+  "subtitles.kaensmall": "",
   "key.diesiraebleach.kougeki": "Kougeki",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
   "item.diesiraebleach.dora_cannon": "Dora Cannon",
@@ -13,6 +15,7 @@
   "advancements.keisei.descr": "使い手と同調した聖遺物は形を成し、武器として使えるようになった。",
   "entity.diesiraebleach.schmeizer_mahoujin": "Schmeizer Mahoujin",
   "advancements.keisei.title": "形成位階",
+  "subtitles.kaen": "",
   "key.diesiraebleach.rwazasentaku": "Rwazasentaku",
   "item.diesiraebleach.marglitto_guillottin": "聖遺物【罪姫・正義の柱】",
   "advancements.katsudouj.descr": "聖遺物と契約を結び、聖遺物が活動を始めた。",
@@ -20,6 +23,7 @@
   "subtitles.kaze": "",
   "item.diesiraebleach.firekibaku_spawn_egg": "Firekibaku Spawn Egg",
   "effect.seiibutsubei": "聖遺物・闇の賜物",
+  "subtitles.kyusei": "",
   "item.diesiraebleach.test_4": "Test 4",
   "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
   "subtitles.beikeisei": "",
@@ -32,8 +36,10 @@
   "item.diesiraebleach.getsugaenkyori": "Getsugaenkyori",
   "item.diesiraebleach.panzer_mahoujin_spawn_egg": "Panzer Mahoujin Spawn Egg",
   "subtitles.bakuhatsu": "",
+  "subtitles.terror": "",
   "advancements.katsudouj.title": "活動位階",
   "item.diesiraebleach.seiibutsuhihiirokane_item": "聖遺物【緋々色金】",
+  "subtitles.hellfire": "",
   "subtitles.ewigkeite": "",
   "effect.zarathustra_potion_effect": "Eine Faust Ouvertüre",
   "item.diesiraebleach.reset": "Reset",
@@ -42,7 +48,9 @@
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
   "item.diesiraebleach.qliphoth_bacikal_2": "聖遺物【闇の賜物】",
   "subtitles.panzer": "",
+  "entity.diesiraebleach.ibara": "Ibara",
   "item.diesiraebleach.test": "Test",
+  "subtitles.beikeisei2": "",
   "advancements.souzou.descr": "聖遺物と一体となり、己が渇望を具現化した世界を創り出す。",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
@@ -55,5 +63,6 @@
   "subtitles.kensuburi": "",
   "subtitles.fire": "",
   "entity.diesiraebleach.firekibaku": "Firekibaku",
-  "subtitles.panzersummon": ""
+  "subtitles.panzersummon": "",
+  "item.diesiraebleach.ibara_spawn_egg": "Ibara Spawn Egg"
 }
