--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -41,6 +41,7 @@
   "item.diesiraebleach.seiibutsuhihiirokane_item": "聖遺物【緋々色金】",
   "subtitles.hellfire": "",
   "subtitles.ewigkeite": "",
+  "subtitles.warp1": "",
   "effect.zarathustra_potion_effect": "Eine Faust Ouvertüre",
   "item.diesiraebleach.reset": "Reset",
   "effect.seiibutsu_hihiirokane": "聖遺物・緋々色金",
