--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -8,6 +8,7 @@
   "key.diesiraebleach.kougeki": "Kougeki",
   "item.diesiraebleach.schmeizer_item": "Schmeizer Item",
   "item.diesiraebleach.dora_cannon": "聖遺物【極大火砲・狩猟の魔王】",
+  "item.diesiraebleach.dummyschmeizer": "Dummyschmeizer",
   "subtitles.dageki": "",
   "subtitles.speed2": "",
   "subtitles.speed3": "",
@@ -38,6 +39,7 @@
   "subtitles.bakuhatsu": "",
   "subtitles.terror": "",
   "advancements.katsudouj.title": "活動位階",
+  "subtitles.machinegunfire": "",
   "item.diesiraebleach.seiibutsuhihiirokane_item": "聖遺物【緋々色金】",
   "subtitles.hellfire": "",
   "subtitles.ewigkeite": "",
@@ -57,6 +59,7 @@
   "item.diesiraebleach.kui": "Kui",
   "subtitles.speed4": "",
   "item.diesiraebleach.schmeizer_mahoujin_spawn_egg": "Schmeizer Mahoujin Spawn Egg",
+  "effect.levitationfirepotion": "火炎浮揚",
   "subtitles.timestop": "",
   "entity.diesiraebleach.panzer_mahoujin": "Panzer Mahoujin",
   "item.diesiraebleach.hihiirokane": "緋々色金",
