--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -49,6 +49,7 @@
   "effect.seiibutsu_hihiirokane": "聖遺物・緋々色金",
   "subtitles.punchsuburi": "",
   "item.diesiraebleach.panzer_faust_item": "Panzer Faust Item",
+  "effect.cool_time": "クールタイム",
   "item.diesiraebleach.qliphoth_bacikal_2": "聖遺物【闇の賜物】",
   "subtitles.panzer": "",
   "entity.diesiraebleach.ibara": "Ibara",
