FujiRenSouzouを作成（未完成）

--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -25,6 +25,7 @@
   "item.diesiraebleach.firekibaku_spawn_egg": "Firekibaku Spawn Egg",
   "effect.seiibutsubei": "聖遺物・闇の賜物",
   "subtitles.kyusei": "",
+  "effect.time_stop": "時間停止",
   "item.diesiraebleach.test_4": "Test 4",
   "item.diesiraebleach.bei_keiseihana": "Bei Keiseihana",
   "subtitles.beikeisei": "",
