--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -18,6 +18,7 @@
   "advancements.keisei.title": "形成位階",
   "subtitles.kaen": "",
   "key.diesiraebleach.rwazasentaku": "Rwazasentaku",
+  "effect.fuji_ren_souzou_potion_effect": "美麗刹那・序曲",
   "item.diesiraebleach.marglitto_guillottin": "聖遺物【罪姫・正義の柱】",
   "advancements.katsudouj.descr": "聖遺物と契約を結び、聖遺物が活動を始めた。",
   "key.diesiraebleach.oowaza": "Oowaza",
