--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -57,6 +57,7 @@
   "entity.diesiraebleach.ibara": "Ibara",
   "item.diesiraebleach.test": "Test",
   "subtitles.beikeisei2": "",
+  "effect.rosenkavalier_schwarzwald": "創造 ― 死森の薔薇騎士",
   "advancements.souzou.descr": "聖遺物と一体となり、己が渇望を具現化した世界を創り出す。",
   "item.diesiraebleach.makina_glove": "Makina Glove",
   "item.diesiraebleach.kui": "Kui",
