アイテムをとるとダメージを受けるバグを修正。

--- a/src/main/resources/assets/diesiraebleach/lang/en_us.json
+++ b/src/main/resources/assets/diesiraebleach/lang/en_us.json
@@ -73,6 +73,7 @@
   "subtitles.guncharge": "",
   "subtitles.kensuburi": "",
   "subtitles.fire": "",
+  "effect.schreibereffect": "神速",
   "entity.diesiraebleach.firekibaku": "Firekibaku",
   "subtitles.panzersummon": "",
   "item.diesiraebleach.ibara_spawn_egg": "Ibara Spawn Egg"
